# resemble

./: Cargo.toml  LICENSE  README.md
src/: ast.rs  embeddings.rs  lib.rs  similarity.rs
tests/: integration_test.rs
